--- a/index.html
+++ b/index.html
@@ -95,6 +95,29 @@
       </aside>
       <!-- End of Sidebar Section -->
 
+      <!-- Main Content -->
+      <main>
+         <h1>Analytics</h1>
+         <!-- Analyses -->
+         <div class="analyse">
+            <div class="sales">
+               <div class="status">
+                  <div class="info">
+                     <h3>Total Sales</h3>
+                     <h1>$65,024</h1>
+                  </div>
+                  <div class="progresss">
+                     <svg>
+                        <circle cx="38" cy="38" r="36"></circle>
+                     </svg>
+                     <div class="percentage">
+                        <p>+81%</p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </main>
 
 
 
