--- a/index.html
+++ b/index.html
@@ -196,10 +196,73 @@
             </table>
             <a href="#">Show All</a>
          </div>
+         <!-- End of Recent Orders -->
 
       </main>
+      <!-- End of Main Content -->
+
+      <!-- Right Section -->
+      <div class="right-section">
+         <!-- Nav Section -->
+         <div class="nav">
+            <button id="menu-btn">
+               <span class="material-icons-sharp">
+                  menu
+               </span>
+            </button>
+            <div class="dark-mode">
+               <span class="material-icons-sharp active">
+                  light_mode
+               </span>
+               <span class="material-icons-sharp">
+                  dark_mode
+               </span>
+            </div>
+            <div class="profile">
+               <div class="info">
+                  <p>Hey, <b>Reza</b></p>
+                  <small class="text-muted">Admin</small>
+               </div>
+               <div class="profile-photo">
+                  <img src="/Dashboard/images/profile-1.jpg">
+               </div>
+            </div>
+         </div>
+         <!-- End of Nav Section -->
+
+         <div class="user-profile">
+            <div class="logo">
+               <img src="/Dashboard/images/logo.png">
+               <h2>AsmrProg</h2>
+               <p>Fullstack Web Developer</p>
+            </div>
+         </div>
+
+         <div class="reminders">
+            <div class="header">
+               <h2>Reminders</h2>
+               <span class="material-icons-sharp">
+                  notifications_none
+               </span>
+            </div>
+         </div>
+
+         <div class="notifications">
+            <div class="icon">
+               <span class="material-icons-sharp">
+                  volume_up
+               </span>
+            </div>
+            <div class="content">
+               <div class="info">
+                  <h3>Workshop</h3>
+               </div>
+            </div>
+         </div>
 
 
+      </div>
+      <!-- End of Right Section -->
 
    </div>
 
