--- a/index.html
+++ b/index.html
@@ -245,19 +245,55 @@
                   notifications_none
                </span>
             </div>
-         </div>
 
-         <div class="notifications">
-            <div class="icon">
-               <span class="material-icons-sharp">
-                  volume_up
-               </span>
-            </div>
-            <div class="content">
-               <div class="info">
-                  <h3>Workshop</h3>
+
+            <div class="notification">
+               <div class="icon">
+                  <span class="material-icons-sharp">
+                     volume_up
+                  </span>
+               </div>
+               <div class="content">
+                  <div class="info">
+                     <h3>Workshop</h3>
+                     <small class="text_muted">
+                        08:00 AM - 12:00 PM
+                     </small>
+                  </div>
+                  <span class="material-icons-sharp">
+                     more_vert
+                  </span>
                </div>
             </div>
+
+            <div class="notification deactive">
+               <div class="icon">
+                  <span class="material-icons-sharp">
+                     edit
+                  </span>
+               </div>
+               <div class="content">
+                  <div class="info">
+                     <h3>Workshop</h3>
+                     <small class="text_muted">
+                        08:00 AM - 12:00 PM
+                     </small>
+                  </div>
+                  <span class="material-icons-sharp">
+                     more_vert
+                  </span>
+               </div>
+            </div>
+
+            <div class="notification add-reminder">
+               <div>
+                  <span class="material-icons-sharp">
+                     add
+                  </span>
+                  <h3>Add reminder</h3>
+               </div>
+            </div>
+
          </div>
 
 
