--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             <div class="notification">
                <div class="icon">
                   <span class="material-icons-sharp">
-                     volume_up
+                     volume_u
                   </span>
                </div>
                <div class="content">
