--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          <div class="toggle">
             <div class="logo">
                <img src="images/logo.png">
-               <h2>Asmr<span class="danger">Prog</span></h2>
+               <h2>Amr<span class="danger">Prog</span></h2>
             </div>
             <div class="close" id="close-btn">
                <span class="material-icons-sharp">
